# equity-rotation-tracking

./: README.md
api/: .env.example  README.md  requirements.txt
api/app/: deps.py  main.py  schemas.py
api/app/routers/: groups.py  ratios.py  tickers.py
api/sql/: schema.sql
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AddRatioForm.tsx  AddTickersForm.tsx  Dashboard.tsx  DeleteGroupModal.tsx  GroupMultiSelect.tsx  HeatmapPanel.tsx  RenameGroupModal.tsx  Sidebar.tsx
offline-jobs/: .env.example  README.md  requirements.txt  run_daily.sh
offline-jobs/data_cleanup_job/: __main__.py
offline-jobs/data_collector_job/: __main__.py
shared/: README.md  pyproject.toml
shared/equity_rotation_shared/: __init__.py  db.py  env.py  models.py  polygon.py
shared/equity_rotation_shared.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
