[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "equity-rotation-shared"
version = "0.1.0"
description = "Shared models, DB engine, and Polygon ingestion helpers for equity-rotation-tracking."
requires-python = ">=3.10"
dependencies = [
    "SQLAlchemy>=2.0",
    "psycopg[binary]>=3.2",
    "requests>=2.32",
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
include = ["equity_rotation_shared*"]
